--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -24,7 +24,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../img/welcome-1.jpg);
+  background-image: url(../img/samuel.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
