--- a/registerpast/css/style.css
+++ b/registerpast/css/style.css
@@ -76,7 +76,14 @@ a:hover {
     position: absolute;
     bottom: 9px;
     right: 0; }
-
+    input[type=number]::-webkit-inner-spin-button { 
+      -webkit-appearance: none;
+      
+    }
+    input[type=number] { 
+     -moz-appearance: textfield;
+     appearance: textfield;
+    }
 .form-control {
   border: 1px solid #333;
   border-top: none;
